<resources>
    <string name="app_name">PhoneCleaner</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="privacy_text">By clicking start, you agree to the terms stated in \nnour <a href="https://www.google.com/">User Agreement</a> and <a href="https://www.google.com/">Privacy Policy</a>.Checkout\n <a href="https://www.google.com/">Information</a> <a href="https://www.google.com/">Collection Notice</a>.</string>
    <string name="agree_start">AGREE &amp; START</string>
    <string name="phone_cleaner">Phone Cleaner</string>
    <string name="agree_and_start">agree and start</string>
    <string name="close_button">close button</string>
    <string name="antivirus_icon">antivirus icon</string>
    <string name="antivirus">Antivirus</string>
    <string name="details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="junk_files">Junk Files</string>
    <string name="notification_blocker">Notification Blocker</string>
    <string name="cache_cleaner">Cache Cleaner</string>
    <string name="phone_booster">Phone Booster</string>
    <string name="battery_manager">Battery Manager</string>
    <string name="battery_saver">Power Saver</string>
    <string name="home">Home</string>
    <string name="toolbox">Toolbox</string>
    <string name="apps">Apps</string>
    <string name="more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memory_used">Memory Used</string>
    <string name="storage_used">Storage Used</string>
    <string name="clean_now">Clean Now</string>
    <string name="phone_boost_now">Boost Now</string>
    <string name="cool_now">Cool Now</string>
    <string name="scan">Scan</string>
</resources>