<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LauncherActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/splash_screen"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:contentDescription="@string/splash_screen"
        android:src="@drawable/splash_big_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rocketIV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:contentDescription="@string/splash_screen"
        android:src="@drawable/rocket"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="104dp" />

    <TextView
        android:id="@+id/appnameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/phone_cleaner"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/privacyTv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/privacyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autoLink="web"
        android:fontFamily="@font/open_sans"
        android:linksClickable="true"
        android:text="@string/privacy_text"
        android:textColor="@color/black2"
        android:textColorLink="@color/purple_200"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintStart_toStartOf="@+id/appnameTv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/startIc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/agree_and_start"
            android:scaleType="fitXY"
            android:src="@drawable/start_btn"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/agreeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/agree_start"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressCircleDeterminate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_32sdp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>