<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.Screen1Activity">

    <ImageView
        android:id="@+id/close_id"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/close_icon"
        android:padding="@dimen/_8sdp"
        android:layout_margin="@dimen/_8sdp"
        android:contentDescription="@string/close_button"/>

    <ImageView
        android:id="@+id/antivirusIv"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        app:layout_constraintTop_toBottomOf="@id/close_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/notification_icon"
        android:contentDescription="@string/antivirus_icon"
        android:layout_marginTop="@dimen/_16sdp"/>

    <ImageView
        android:id="@+id/antivirussIv"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        app:layout_constraintTop_toBottomOf="@id/close_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/battery_icon"
        android:contentDescription="@string/antivirus_icon"
        android:layout_marginTop="@dimen/_16sdp"/>


    <TextView
        android:id="@+id/antivirusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/antivirusIv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_32sdp"
        android:text="@string/battery_manager"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_24sdp"
        />

    <TextView
        android:id="@+id/antivirusLableTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/antivirusTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/details"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_8sdp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/antivirusLableTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        >
        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/next_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Next"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/open_sans_bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/back_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nextBtn">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>